# aura

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action_server.py  config.py  docker-compose.yml  health_log.json  llm.py  log.py  messages.py  pyproject.toml  requirements.txt  service.py  supabase_listener.py  tts.py
action_server/: Dockerfile  action_server.py  requirements.txt
app/: config.py  llm.py  log.py  messages.py  service.py  stt.py  tools.json  tts.py
data/: biomarker_ranges_verified.xlsx  biomarkers.csv  hackathon_brief_nudging_health_behaviour.docx  health_assessment.csv  users.csv  wearable_data.csv
service_server/: requirements.txt  service.py
supabase_listener/: Dockerfile  requirements.txt  supabase_listener.py
