[project]
name = "aura"
version = "0.1.0"
description = "Personal Assistant on WhatsApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "APScheduler",
    "supabase",
    "python-dotenv",
    "elevenlabs",
    "openai",
    "pydantic",
    "realtime",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"